try to fix figure spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1002,7 +1002,7 @@ pre code {
   margin: 30px;
 }
 
-.science-figure p {
+.figure-text {
 	font-family: sans-serif;
 	font-style: italic;
 /*  text-transform: uppercase; */
